:sparkles: feat: Algoritmos de Círculos Paramétrico
Adição do algoritmo de geração de círculos Paramétrico (Java).

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
 *.exe
 /(CG) Algoritmos Geração de Retas/nbproject/private/
 /(CG) Algoritmos Geração de Retas/build/
+/(CG) Geração de Círculos/nbproject/private/
+/(CG) Geração de Círculos/build/
+/(CG) Algoritmos Geração de Círculos/nbproject/private/
+/(CG) Algoritmos Geração de Círculos/build/
